src/definitions/modules/modal.less
/* ... */
/*--------------
    Coupling
---------------*/

.ui.inverted.dimmer > .ui.modal {
  box-shadow: @invertedBoxShadow;
}

/*******************************
             Types
*******************************/

.ui.basic.modal {
  background-color: transparent;
  border: none;
  border-radius: 0;
  box-shadow: none !important;
  color: @basicModalColor;
}
.ui.basic.modal > .header,
.ui.basic.modal > .content,
.ui.basic.modal > .actions {
  background-color: transparent;
}
.ui.basic.modal > .header {
  color: @basicModalHeaderColor;
}
.ui.basic.modal > .close {
  top: @basicModalCloseTop;
  right: @basicModalCloseRight;
  color: @basicInnerCloseColor;
}

.ui.inverted.dimmer > .basic.modal {
  color: @basicInvertedModalColor;
}
.ui.inverted.dimmer > .ui.basic.modal > .header {
  color: @basicInvertedModalHeaderColor;
}
/* Resort to margin positioning if legacy */
.ui.legacy.legacy.modal,
.ui.legacy.legacy.page.dimmer > .ui.modal {
  left: 50% !important;
}
.ui.legacy.legacy.modal:not(.aligned),
.ui.legacy.legacy.page.dimmer > .ui.modal:not(.aligned) {
  top: 50%;
}
.ui.legacy.legacy.page.dimmer > .ui.scrolling.modal:not(.aligned),
.ui.page.dimmer > .ui.scrolling.legacy.legacy.modal:not(.aligned),
.ui.top.aligned.legacy.legacy.page.dimmer > .ui.modal:not(.aligned),
.ui.top.aligned.dimmer > .ui.legacy.legacy.modal:not(.aligned) {
  top: auto;
}

.ui.legacy.overlay.fullscreen.modal {
  margin-top: -@scrollingMargin !important;
}

/*******************************
             States
*******************************/

.ui.loading.modal {
  display: block;
  visibility: hidden;
  z-index: @loadingZIndex;
}

.ui.active.modal {
  display: block;
}

/*******************************
           Variations
*******************************/

/*--------------
   Aligned
---------------*/

.ui.top.aligned.modal {
  top: @topAlignedMargin;
}
.ui.bottom.aligned.modal {
  bottom: @bottomAlignedMargin;
}

@media only screen and (max-width : @largestMobileScreen) {
  .ui.top.aligned.modal {
    top: @mobileTopAlignedMargin;
  }
  .ui.bottom.aligned.modal {
    bottom: @mobileBottomAlignedMargin;
  }
}


/*--------------
    Scrolling
---------------*/

/* Scrolling Dimmer */
.scrolling.dimmable.dimmed {
  overflow: hidden;
}
.scrolling.dimmable > .dimmer {
  justify-content: flex-start;
  position: fixed;
}
.scrolling.dimmable.dimmed > .dimmer {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
.modals.dimmer .ui.scrolling.modal:not(.fullscreen) {
  margin: @scrollingMargin auto;
}
/* Fix for Firefox, Edge, IE11 */
.modals.dimmer .ui.scrolling.modal:not(.fullscreen)::after {
  content:'\00A0';
  position: absolute;
  height: @scrollingMargin;
}
/* Undetached Scrolling */
.scrolling.undetached.dimmable.dimmed {
  overflow: auto;
  -webkit-overflow-scrolling: touch;
}
.scrolling.undetached.dimmable.dimmed > .dimmer {
  overflow: hidden;
}
.scrolling.undetached.dimmable .ui.scrolling.modal:not(.fullscreen) {
  position: absolute;
  left: 50%;
  margin-top: @scrollingMargin !important;
}

/* Scrolling Content */
.ui.modal > .scrolling.content {
  max-height: @scrollingContentMaxHeight;
  overflow: auto;
}
.ui.overlay.fullscreen.modal > .content {
  min-height: @overlayFullscreenScrollingContentMaxHeight;
}
.ui.overlay.fullscreen.modal > .scrolling.content {
  max-height: @overlayFullscreenScrollingContentMaxHeight;
}

/*--------------
   Full Screen
---------------*/

.ui.fullscreen.modal {
  width: @fullScreenWidth;
  left: @fullScreenOffset;
  margin: @fullScreenMargin;
}
.ui.overlay.fullscreen.modal {
  width: 100%;
  left: 0;
  margin: 0 auto;
  top: 0;
  border-radius:0;
}
.ui.fullscreen.modal > .header {
  padding-right: @closeHitbox;
}
.ui.fullscreen.modal > .close {
  top: @innerCloseTop;
  right: @innerCloseRight;
  color: @innerCloseColor;
}
.ui.basic.fullscreen.modal > .close {
  color: @basicInnerCloseColor;
}
/*--------------
      Size
---------------*/

.ui.modal {
  font-size: @medium;
}

/* Mini */
.ui.mini.modal > .header:not(.ui) {
  font-size: @miniHeaderSize;
}

/* Mini Modal Width */
@media only screen and (max-width : @largestMobileScreen) {
  .ui.mini.modal {
    width: @miniMobileWidth;
    margin: @miniMobileMargin;
  }
}
@media only screen and (min-width : @tabletBreakpoint) {
  .ui.mini.modal {
    width: @miniTabletWidth;
    margin: @miniTabletMargin;
  }
}
@media only screen and (min-width : @computerBreakpoint) {
  .ui.mini.modal {
    width: @miniComputerWidth;
    margin: @miniComputerMargin;
  }
}
@media only screen and (min-width : @largeMonitorBreakpoint) {
  .ui.mini.modal {
    width: @miniLargeMonitorWidth;
    margin: @miniLargeMonitorMargin;
  }
}
@media only screen and (min-width : @widescreenMonitorBreakpoint) {
  .ui.mini.modal {
    width: @miniWidescreenMonitorWidth;
    margin: @miniWidescreenMonitorMargin;
  }
}

/* Tiny */
.ui.tiny.modal > .header:not(.ui) {
  font-size: @tinyHeaderSize;
}

/* Tiny Modal Width */
@media only screen and (max-width : @largestMobileScreen) {
  .ui.tiny.modal {
    width: @tinyMobileWidth;
    margin: @tinyMobileMargin;
  }
}
@media only screen and (min-width : @tabletBreakpoint) {
  .ui.tiny.modal {
    width: @tinyTabletWidth;
    margin: @tinyTabletMargin;
  }
}
@media only screen and (min-width : @computerBreakpoint) {
  .ui.tiny.modal {
    width: @tinyComputerWidth;
    margin: @tinyComputerMargin;
  }
}
@media only screen and (min-width : @largeMonitorBreakpoint) {
  .ui.tiny.modal {
    width: @tinyLargeMonitorWidth;
    margin: @tinyLargeMonitorMargin;
  }
}
@media only screen and (min-width : @widescreenMonitorBreakpoint) {
  .ui.tiny.modal {
    width: @tinyWidescreenMonitorWidth;
    margin: @tinyWidescreenMonitorMargin;
  }
}

/* Small */
.ui.small.modal > .header:not(.ui) {
  font-size: @smallHeaderSize;
}

/* Small Modal Width */
@media only screen and (max-width : @largestMobileScreen) {
  .ui.small.modal {
    width: @smallMobileWidth;
    margin: @smallMobileMargin;
  }
}
/* ... */

